# hyprmon

./: Cargo.toml  LICENSE  README.md  hyprmon.desktop
src/: app.rs  config.rs  hypr_ipc.rs  input.rs  main.rs  monitor.rs  state.rs
src/ui/: arrangement.rs  dialogs.rs  help.rs  mod.rs  saved.rs  settings.rs  tabs.rs
