[package]
name = "hyprmon"
version = "0.1.0"
edition = "2021"
description = "TUI for Hyprland monitor configuration"
authors = ["Chau Van Loc"]
license = "MIT"
repository = "https://github.com/ChauVanLoc01/hyprmon"

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", default-features = false, features = ["events"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "6.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev.package."*"]
opt-level = 2

[lints.clippy]
all = { level = "warn", priority = -1 }
perf = { level = "deny", priority = 1 }
redundant_clone = "deny"
needless_collect = "warn"
large_enum_variant = "warn"
clone_on_copy = "warn"
